spelling and othe errors

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ TEAMC 2018 includes Agile Software Development, Data Management, Web Intelligenc
 								</div>
 								<div class="media-body">
 									<h4 class="media-heading">Paper oriented</h4>
-									<p>A primary aim of the hackathon is to promote the teams in publishing and presenting papers on their adaptable solutions. After careful consideration, selected teams will be allowed to present their solutions to an international audience during the actual conference and publish them in an indexed journal under ISBN.</p>
+									<p>The primary aim of the hackathon is to promote the teams in publishing and presenting papers on their adaptable solutions. After careful consideration, selected teams will be allowed to present their solutions to an international audience during the actual conference and publish them in an indexed journal under ISBN.</p>
 								</div>
 							</div>
 						</div>
@@ -257,7 +257,7 @@ Start Call To Action
 			<div class="col-md-12 text-center">
 				<h2>Register</h2>
 				<p>
-				    Register in this new unique and exciting hackathon o win prizes worth a ton.
+				    Register in this new unique and exciting hackathon to win prizes worth a ton.
 				</p>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSckm90OwewqAXCYVRUSWplnj4Ia6PpxYjnybtN4v5uU3LXWQw/viewform?usp=sf_link" target="_blank" class="btn btn-main">Click here to Register</a>
 			</div>
@@ -286,7 +286,7 @@ Start Call To Action
 						<i class="tf-globe"></i>
 					</div>
 					<h3>Rural and Sub-Urban</h3>
-					<p>As the technology races to add more comfort and sohestication to our lifestyles, there still exist people amongst us who dont even have the basic necessities of life.as a responsible citizen of the society, lets work for the upliftment of those sections. pay a visit to the rural areas, empathize with the problems they face and innovate     to create a solution that could better the lifes of many.</p>
+					<p>As the technology races to add more comfort and sophestication to our lifestyles, there still exist people amongst us who don't even have the basic necessities of life.As a responsible citizen of the society, lets work for the upliftment of those sections. Pay a visit to the rural areas, empathize with the problems they face and innovate     to create a solution that could better the lives of many.</p>
 				</div>
 			</article>
             <!-- End Single Service Item -->
@@ -298,7 +298,7 @@ Start Call To Action
 						<i class="tf-ion-laptop"></i>
 					</div>
 					<h3>Healthcare</h3>
-					<p>The very motive behind technology has been betterment of human life.using the current level of advancement, lets explore the healthcare sector in india.Pay a visit to any healthcare centre and research through the possibilities as well as existing loopholes to devise solutions for uplifting the quality of healthcare services.</p>
+					<p>The very motive behind technology has been betterment of human life.Using the current level of advancement, let's explore the healthcare sector in India.Pay a visit to any healthcare centre and research through the possibilities as well as existing loopholes to devise solutions for uplifting the quality of healthcare services.</p>
 				</div>
 			</article>
             <!-- End Single Service Item -->
@@ -322,7 +322,7 @@ Start Call To Action
 						<i class="tf-dial"></i>
 					</div>
 					<h3>Education</h3>
-					<p>Been to schools and other educational institutions throughout your life, let's take another trip down the memory lane for what we call the educational trek. Pay an institute a visit, interact and study to devise any problem you deem fit for your perusal. Give us a smart solution and triumph.</p>
+					<p>Been to schools and other educational institutions throughout your life, let's take another trip down the memory lane for what we call the educational trek. Pay an institute a visit, interact and study to devise a solution to any problem you deem fit for your perusal. Give us a smart solution and triumph.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -334,7 +334,7 @@ Start Call To Action
 						<i class="tf-target3"></i>
 					</div>
 					<h3>Government Offices</h3>
-                    <p>The worries of common man while dealing with the bureaucracy is well known.  From standing in really long lines to never geting files done on time,   the list is long. Pay a visit to any government office, understand its working and innovate to find solutions to these glitches.</p>
+                    <p>The worries of common man while dealing with the bureaucracy is well known.  From standing in really long queues to never getting files done on time,   the list is long. Pay a visit to any government office, understand its working and innovate to find solutions to these glitches.</p>
 					<!-- <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p> -->
 				</div>
 			</article>
@@ -405,7 +405,7 @@ Start Call To Action
 								</div>
 							</li>
 							<li>
-								<p><span>04-</span>Its time to Hack</p>
+								<p><span>04-</span>It's time to Hack</p>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="70"
 									aria-valuemin="0" aria-valuemax="100" style="width:56%">
@@ -577,9 +577,9 @@ All teams wishing to participate in the hackathon must register themselves by th
                                 <div class="portolio-block" style="margin:100px auto; margin-top:10px">
                                             <h3 >PHASE 3</h3>
                                         <h4>
-                                            Teams will get an excellent opportunity to showcase their work in the prestigious International Conference  TEAMC 2018 during March 26-28, 2018 (<a href="https://www.teamc18.com">www.teamc18.com</a>) at NSIT, in front of an international audience of researchers, industry leaders and government officials. Efforts will be made to carry forward potentially promising submissions so that they can be fully developed into working prototypes and products with the assistance of incubation centers.
+                                            Teams will get an excellent opportunity to showcase their work in the prestigious International Conference  TEAMC 2018 during March 26-28, 2018 (<a href="https://www.teamc18.com">www.teamc18.com</a>) at NSIT, in front of an international audience of researchers, industry leaders and government officials. Efforts will be made to carry forward potentially promising submissions so that they can be fully developed into working prototypes and products with the assistance of incubation center.
 <br><br>
-Teams need to complete Part B their paper by adding experimental results and conclusion and submit the final paper comprising both Part A and Part B, by 10 Feb, 2018. The total length of the paper should not exceed 14 pages. At least one member of each team will have to  register for TEAMC 2018 if they wish to present their paper.
+Teams need to complete Part B of their paper by adding experimental results and conclusion and submit the final paper comprising both Part A and Part B, by 10 Feb, 2018. The total length of the paper should not exceed 14 pages. At least one member of each team will have to  register for TEAMC 2018 if they wish to present their paper.
 <br><br>
 The paper submissions will be reviewed and selected papers will be invited to present their papers. They will be published in an indexed Journal with ISBN. The best paper will be given the <span class='color'>Best Paper Award</span> in Hackathon category.
                                     </h4>
@@ -875,27 +875,27 @@ Start Our Team
 
                 <li>
                         <div class="item ">
-                            <h3>1. Teams must register before last date <span class="color">30th Dec, 2017 </span>. The date will not be extended under any circumstances. </h3>
+                            <h3>1. Teams must register before the last date <span class="color">10th Jan, 2018 </span>. The date will not be extended under any circumstances. </h3>
                         </div>
                         <div class="item  ">
                             <h3>2. A team must comprise of at least 2 and a maximum of 4  members. </h3>
                         </div>
                         <div class="item  ">
-                            <h3>3. Teams must strictly adhere to the registration rules set by the organisers violation of which leads to cancellation of registration.     </h3>
+                            <h3>3. Teams must strictly adhere to the registration rules set by the organisers violation of which will lead to cancellation of registration.     </h3>
                         </div>
                         <div class="item  ">
                             <h3>4. A team can enroll for any one trek.
-The place of interest of treks may chosen by participants themselves but should belong to any of the mentioned treks.</h3>
+The place of interest of treks may be chosen by participants themselves but should belong to any one of the mentioned treks.</h3>
                         </div>
                         <div class="item  ">
-                            <h3>5. Documentation guidelines must strictly followed. For more details, visit http://teamc18.com.</h3>
+                            <h3>5. Documentation guidelines must strictly be followed. For more details, visit <a href="https://www.teamc18.com">www.teamc18.com.</a></h3>
                         </div>
                         <div class="item  ">
                             <h3>6. Plagiarism or submission of copyrighted content  or content containing viruses or disabling devices or harmful codes is strictly prohibited.
                             </h3>
                         </div>
                         <div class="item  ">
-                            <h3>7. Teams will begin second part of paper,  part B ( for more details, visit http://teamc18.com) , and will be invited to be a part of HACKEAM 2018 during 30-31 Jan. </h3>
+                            <h3>7. Teams will begin the second part of paper,  part B ( for more details, visit <a href="https://www.teamc18.com">www.teamc18.com.</a>) , and will be invited to be a part of HACKEAM 2018 during 30-31 Jan. </h3>
                         </div>
                         <div class="item  ">
                             <h3>8. Last date for completion and submission of paper(both part A and part B)  is 28th Feb, 2018. Late entries will not be entertained. </h3>
@@ -985,7 +985,7 @@ Start Blog Section
                                   <div>
 
                                       <p>
-                                          No, TeamC offers no kind of reimbursement for any expenses occurring due to travel, accomodation or any other kind.
+                                          No, TeamC offers no kind of reimbursement for any expenses.
                                     </p>
                                   </div>
                               </div>
@@ -1005,7 +1005,7 @@ Start Blog Section
                               <div id="tab-faq7" class="tab-pane fade">
                                   <div>
                                     <p>
-                                        The participant needs to visit a government office, school or a  hospital or ony of the mentioned places to analyse and 		journalise a problem. This visit is termed as treks.
+                                        The participant needs to visit a government office, school or a  hospital or any of the mentioned places to analyse and 		journalise a problem. This visit is termed as treks.
  </p>
                                   </div>
                               </div>
@@ -1018,7 +1018,7 @@ Start Blog Section
                               <div id="tab-faq10" class="tab-pane fade">
                                   <div>
                                     <p>
-                                    	Have a question that isn’t mentioned here? Email us at <a href='mailto:teamc.hackeam2018@gmail.com'>teamc.hackeam2018@gmail.com</a>. </p>
+                                    	Have a question that isn’t mentioned here? Email us at <span class="color">  <a href='mailto:teamc.hackeam2018@gmail.com'>teamc.hackeam2018@gmail.com</a></span>. </p>
                                   </div>
                               </div>
 
@@ -1044,7 +1044,7 @@ Start Blog Section
 			<div class="contact-info col-md-6 wow fadeInUp" data-wow-duration="500ms">
 				<h3>Contact Details</h3>
 				<p>in case of any queries you can contact us via this form or via the channels given below:</p>
-				<div class="contact-details">
+				<div class="contact-details" style="font-size:16px;">
 					<div class="con-info clearfix">
 						<i class="tf-map-pin"></i>
 						<span>Netaji Subhas Institue of Technology,Dwarka Sec-3,DELHI</span>
@@ -1056,7 +1056,7 @@ Start Blog Section
 					</div>
                     <div class="con-info clearfix">
                         <i class="tf-ion-ios-telephone-outline"></i>
-                        <span>&nbsp;Aishanya Singh:+91 97i61 07555</span>
+                        <span>&nbsp;Aishanya Singh:+91 97161 07555</span>
                     </div>
 
 
