addd kink to teamc site

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@ Welcome Slider
                 <li><a data-scroll href="#rules">Rules</a></li>
                 <li><a data-scroll href="#FAQS">FAQs</a></li>
                 <li><a data-scroll href="#contact-us">Contact Us</a></li>
+                <li><a data-scroll target="_blank" href="http://www.teamc18.com">TeamC-18</a></li>
+
                 <!-- <li><a data-scroll href="#blog">Blog</a></li> -->
             </ul>
         </nav>
