Update event dates

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ All teams wishing to participate in the hackathon must register themselves by th
                                 <div class="portolio-block" style="margin:100px auto; margin-top:10px">
                                             <h3 >PHASE 2</h3>
                                         <h4>
-                                            Teams will now begin the second part of their paper (Part B) that describes the system design of their proposed solution. All teams will be invited to be a part of the hackathon, HACKEAM 2018 during 30-31 Jan 2018. The implementation of their design will be done during the hackathon.
+                                            Teams will now begin the second part of their paper (Part B) that describes the system design of their proposed solution. All teams will be invited to be a part of the hackathon, HACKEAM 2018 during 27-28 Jan 2018. The implementation of their design will be done during the hackathon.
                                     </h4>
                                 </div>
                         </div>
@@ -897,7 +897,7 @@ The place of interest of treks may be chosen by participants themselves but shou
                             </h3>
                         </div>
                         <div class="item  ">
-                            <h3>7. Teams will begin the second part of paper,  part B ( for more details, visit <a href="https://www.teamc18.com">www.teamc18.com.</a>) , and will be invited to be a part of HACKEAM 2018 during 30-31 Jan. </h3>
+                            <h3>7. Teams will begin the second part of paper,  part B ( for more details, visit <a href="https://www.teamc18.com">www.teamc18.com.</a>) , and will be invited to be a part of HACKEAM 2018 during 27-28 Jan. </h3>
                         </div>
                         <div class="item  ">
                             <h3>8. Last date for completion and submission of paper(both part A and part B)  is 28th Feb, 2018. Late entries will not be entertained. </h3>
@@ -1020,7 +1020,7 @@ Start Blog Section
                               <div id="tab-faq10" class="tab-pane fade">
                                   <div>
                                     <p>
-                                    	Have a question that isn’t mentioned here? Email us at <span class="color">  <a href='mailto:teamc.hackeam2018@gmail.com'>teamc.hackeam2018@gmail.com</a></span>. </p>
+                                    	Have a question that isn’t mentioned here? Email us at <span class="color">  <a style="color: black" href='mailto:teamc.hackeam2018@gmail.com'>teamc.hackeam2018@gmail.com</a></span>. </p>
                                   </div>
                               </div>
 
