map working now

--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@ Start Our Team
 
         					<!-- member name & designation -->
         					<div class="member-meta">
-        						<h4>Dr. Shampa Chakravert</h4>
+        						<h4>Dr. Shampa Chakraverty</h4>
         						<span>General Chair</span>
         						<!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur necessitatibus ullam, culpa odio.</p> -->
         					</div>
@@ -1202,11 +1202,11 @@ Start Blog Section
 		<!-- Magnific popup -->
 		<script type="text/javascript" src="plugins/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
 		<!-- Google Map API -->
-		<script type="text/javascript"  src="http://maps.google.com/maps/api/js?sensor=false"></script>
+		<script type="text/javascript"  src="http://maps.google.com/maps/api/js?key=AIzaSyDAmeK6dtYFMLRTA4-E9uWkGiPDkSafDzo"></script>
 		<!-- Sticky Nav -->
 		<script type="text/javascript" src="plugins/Sticky/jquery.sticky.js"></script>
 		<!-- Number Counter Script -->
-		<script type="text/javascript" src="plugins/count-to/jquery.countTo.js"></script>
+		<script type="text/javascript" src="plugins/count-to/jquery.countTo.js"></script>	
 		<!-- wow.min Script -->
 		<script type="text/javascript" src="plugins/wow/dist/wow.min.js"></script>
 		<!-- Custom js -->
