--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Start Call To Action
 						<i class="tf-globe"></i>
 					</div>
 					<h3>Rural and Sub-Urban</h3>
-					<p>As the technology races to add more comfort and sophestication to our lifestyles, there still exist people amongst us who don't even have the basic necessities of life.As a responsible citizen of the society, lets work for the upliftment of those sections. Pay a visit to the rural areas, empathize with the problems they face and innovate     to create a solution that could better the lives of many.</p>
+					<p>As the technology races to add more comfort and sophistication to our lifestyles, there still exist people amongst us who don't even have the basic necessities of life.As a responsible citizen of the society, lets work for the upliftment of those sections. Pay a visit to the rural areas, empathize with the problems they face and innovate     to create a solution that could better the lives of many.</p>
 				</div>
 			</article>
             <!-- End Single Service Item -->
