removed gov office trek

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ Start Call To Action
 			<!-- /section title -->
 
             <!-- Single Service Item -->
-			<article class="col-md-4 col-md-offset-1 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms">
+			<article class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms">
 				<div class="service-block text-center">
 					<div class="service-icon text-center">
 						<i class="tf-globe"></i>
@@ -295,7 +295,7 @@ Start Call To Action
             <!-- End Single Service Item -->
 
             <!-- Single Service Item -->
-			<article class="col-md-4 col-sm-6 col-md-offset-2 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
+			<article class="col-md-4 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
 				<div class="service-block text-center">
 					<div class="service-icon text-center">
 						<i class="tf-ion-laptop"></i>
@@ -319,7 +319,7 @@ Start Call To Action
 			<!-- End Single Service Item -->
 
 			<!-- Single Service Item -->
-			<article class="col-md-4 col-md-offset-1 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
+			<article class="col-md-4  col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
 				<div class="service-block text-center">
 					<div class="service-icon text-center">
 						<i class="tf-dial"></i>
@@ -331,16 +331,16 @@ Start Call To Action
 			<!-- End Single Service Item -->
 
 			<!-- Single Service Item -->
-			<article class="col-md-4 col-md-offset-2 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="400ms">
+			<!-- <article class="col-md-4 col-md-offset-2 col-sm-6  col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="400ms">
 				<div class="service-block text-center">
 					<div class="service-icon text-center">
 						<i class="tf-target3"></i>
 					</div>
 					<h3>Government Offices</h3>
                     <p>The worries of common man while dealing with the bureaucracy is well known.  From standing in really long queues to never getting files done on time,   the list is long. Pay a visit to any government office, understand its working and innovate to find solutions to these glitches.</p>
-					<!-- <p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p> -->
+					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
-			</article>
+			</article> -->
 			<!-- End Single Service Item -->
 
 			<!-- Single Service Item -->
@@ -1205,11 +1205,11 @@ Start Blog Section
 		<script type="text/javascript" src="plugins/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
 		<!-- Magnific popup -->
 		<script type="text/javascript" src="plugins/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
-		
+
 		<!-- Sticky Nav -->
 		<script type="text/javascript" src="plugins/Sticky/jquery.sticky.js"></script>
 		<!-- Number Counter Script -->
-		<script type="text/javascript" src="plugins/count-to/jquery.countTo.js"></script>	
+		<script type="text/javascript" src="plugins/count-to/jquery.countTo.js"></script>
 		<!-- wow.min Script -->
 		<script type="text/javascript" src="plugins/wow/dist/wow.min.js"></script>
 		<!-- Custom js -->
