--- a/index.html
+++ b/index.html
@@ -269,7 +269,285 @@ Start Call To Action
 
 <!-- Start Services Section
 ==================================== -->
+<section id="sponsors" class="pricing section">
+  <div class="container">
+    <div class="row <text-center></text-center>">
 
+
+      <!-- section title -->
+
+        <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
+            <h2>Registered <span class="color">Teams </span></h2>
+          <div class="col-md-4">
+            <div class="pricing-wrapper clearfix">
+          		<div class="pricing-table recommended">
+          			<h3 class="pricing-title">Team</h3>
+          			<div class="price">xCODs<sup></sup></div>
+
+          			<ul class="table-list">
+                   <li>College<span> RD Engineering College</span></li>
+                  <li>Captain <span> Anjani Kumar Thakur</span></li>
+
+          				<li>Email<span> sunnyfixer3941@gmail.com</span></li>
+          				<li>Contact<span> 7011221755</span></li>
+
+          			</ul>
+
+          			<div class="table-buy">
+          				<p>Trek<sup></sup></p>
+          				<a href="#" class="pricing-action"> Healthcare</a>
+          			</div>
+          		</div>
+
+          	</div>
+
+            <div class="border"></div>
+        </div>
+        <div class="col-md-4">
+          <div class="pricing-wrapper clearfix">
+            <div class="pricing-table recommended">
+              <h3 class="pricing-title">Team</h3>
+              <div class="price">Zap!<sup></sup></div>
+
+              <ul class="table-list">
+                 <li>College<span> Northern India Engineering College</span></li>
+                <li>Captain <span> Rishabh Chauhan</span></li>
+
+                <li>Email<span> rishabhc32@gmail.com</span></li>
+                <li>Contact<span> 7042174110</span></li>
+
+              </ul>
+
+              <div class="table-buy">
+                <p>Trek<sup></sup></p>
+                <a href="#" class="pricing-action"> Education</a>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="border"></div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="pricing-wrapper clearfix">
+          <div class="pricing-table recommended">
+            <h3 class="pricing-title">Team</h3>
+            <div class="price">MRP3.0<sup></sup></div>
+
+            <ul class="table-list">
+               <li>College<span> Delhi Technological University</span></li>
+              <li>Captain <span> Pratyush Sharma</span></li>
+
+              <li>Email<span> Sharmapratyush_bt2k16@dtu.ac.in</span></li>
+              <li>Contact<span> 7053002557</span></li>
+
+            </ul>
+
+            <div class="table-buy">
+              <p>Trek<sup></sup></p>
+              <a href="#" class="pricing-action"> Education</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="border"></div>
+      </div>
+
+
+      <div class="col-md-4">
+        <div class="pricing-wrapper clearfix">
+          <div class="pricing-table recommended">
+            <h3 class="pricing-title">Team</h3>
+            <div class="price">Team vector<sup></sup></div>
+
+            <ul class="table-list">
+               <li>College<span> IIITD</span></li>
+              <li>Captain <span> Navneet Anand Sah</span></li>
+
+              <li>Email<span> navneet16170@iiitd.ac.in</span></li>
+              <li>Contact<span> 8376882885</span></li>
+
+            </ul>
+
+            <div class="table-buy">
+              <p>Trek<sup></sup></p>
+              <a href="#" class="pricing-action"> Healthcare</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="border"></div>
+      </div>
+      <div class="col-md-4">
+        <div class="pricing-wrapper clearfix">
+          <div class="pricing-table recommended">
+            <h3 class="pricing-title">Team</h3>
+            <div class="price">Code-IT<sup></sup></div>
+
+            <ul class="table-list">
+               <li>College<span> NSIT</span></li>
+              <li>Captain <span> Hritik Ramchander Harbhla</span></li>
+
+              <li>Email<span> harbhlahritik@gmail.com</span></li>
+              <li>Contact<span> 9819204697</span></li>
+
+            </ul>
+
+            <div class="table-buy">
+              <p>Trek<sup></sup></p>
+              <a href="#" class="pricing-action"> Healthcare</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="border"></div>
+      </div>
+      <div class="col-md-4">
+        <div class="pricing-wrapper clearfix">
+          <div class="pricing-table recommended">
+            <h3 class="pricing-title">Team</h3>
+            <div class="price">Rockers <sup></sup></div>
+
+            <ul class="table-list">
+               <li>College<span> IGDTUW</span></li>
+              <li>Captain <span> Preeti Choraria</span></li>
+
+              <li>Email<span> preeti.choraria0@gmail.com</span></li>
+              <li>Contact<span> 9810902997</span></li>
+
+            </ul>
+
+            <div class="table-buy">
+              <p>Trek<sup></sup></p>
+              <a href="#" class="pricing-action"> Education</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="border"></div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="pricing-wrapper clearfix">
+          <div class="pricing-table recommended">
+            <h3 class="pricing-title">Team</h3>
+            <div class="price">The Rising Coders <sup></sup></div>
+
+            <ul class="table-list">
+               <li>College<span> guru teg bhadur institute of technology</span></li>
+              <li>Captain <span> Karan hans</span></li>
+
+              <li>Email<span> hanskaran555@gmail.com</span></li>
+              <li>Contact<span> 8221022510</span></li>
+
+            </ul>
+
+            <div class="table-buy">
+              <p>Trek<sup></sup></p>
+              <a href="#" class="pricing-action"> Rural and Sub-Urban</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="border"></div>
+      </div>
+      <div class="col-md-4">
+        <div class="pricing-wrapper clearfix">
+          <div class="pricing-table recommended">
+            <h3 class="pricing-title">Team</h3>
+            <div class="price">Bug Squeezers <sup></sup></div>
+
+            <ul class="table-list">
+               <li>College<span> IGDTUW</span></li>
+              <li>Captain <span> Garima Grewal</span></li>
+
+              <li>Email<span> grewalgarima@gmail.com</span></li>
+              <li>Contact<span> 8587030004</span></li>
+
+            </ul>
+
+            <div class="table-buy">
+              <p>Trek<sup></sup></p>
+              <a href="#" class="pricing-action"> Rural and Sub-Urban</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="border"></div>
+      </div>
+      <div class="col-md-4">
+        <div class="pricing-wrapper clearfix">
+          <div class="pricing-table recommended">
+            <h3 class="pricing-title">Team</h3>
+            <div class="price">Tech Geeks <sup></sup></div>
+
+            <ul class="table-list">
+               <li>College<span> GTBIT</span></li>
+              <li>Captain <span> Vaishali Gupta</span></li>
+
+              <li>Email<span> vaishalig503@gmail.com</span></li>
+              <li>Contact<span> 9560720658</span></li>
+
+            </ul>
+
+            <div class="table-buy">
+              <p>Trek<sup></sup></p>
+              <a href="#" class="pricing-action"> Healthcare</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="border"></div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="pricing-wrapper clearfix">
+          <div class="pricing-table recommended">
+            <h3 class="pricing-title">Team</h3>
+            <div class="price">Code Breakers <sup></sup></div>
+
+            <ul class="table-list">
+               <li>College<span> NSIT</span></li>
+              <li>Captain <span> Mridul Chaba</span></li>
+
+              <li>Email<span> mridul.chaba@gmail.com</span></li>
+              <li>Contact<span> 9034451260</span></li>
+
+            </ul>
+
+            <div class="table-buy">
+              <p>Trek<sup></sup></p>
+              <a href="#" class="pricing-action"> Education</a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="border"></div>
+      </div>
+
+
+</div>
+
+        <!-- /section title -->
+
+      <!-- single pricing table -->
+      <!-- end single pricing table -->
+
+
+    </div>       <!-- End row -->
+  </div>   	<!-- End container -->
+</section>
+
+<!-- teams section end -->
 <section id="trek" class="bg-one section">
 	<div class="container">
 		<div class="row">
@@ -631,6 +909,147 @@ The paper submissions will be reviewed and selected papers will be invited to pr
 
 			</div>	<!-- end container -->
 		</section>   <!-- End section -->
+        <section id="Guides" class="bg-one section">
+        	<div class="container">
+        		<div class="row">
+
+        			<!-- section title -->
+        			<div class="title text-center wow fadeIn" data-wow-duration="500ms">
+        				<h2>Our <span class="color">guides</span></h2>
+        				<div class="border"></div>
+        			</div>
+        			<!-- /section title -->
+
+                    <!-- Single Service Item -->
+        			<article class="col-md-4 col-sm-6 col-md-offset-1 col-xs-12 wow fadeInUp" data-wow-duration="500ms">
+        				<div class="service-block text-center">
+        					<div class="service-icon text-center">
+        						<!-- <i class="tf-globe"></i> -->
+                                <img src="images/guides/aman.jpg" alt="" style="height:20vh;">
+        					</div>
+        					<h3>Aman Goyal</h3>
+                            <!-- <h4>Education</h4> -->
+        	<p>Aman Goyal presently works as a Big Data engineer in Guavus Networks. He has a dynamic professional carrier with previous associations with organizations like SAP, Shopzilla, Yes Bank , and InfoEdge. Aman is a Computer Science graduate of the 2012 batch of NSIT. He believes in continuous learning and is also an Associate Professor at EduPristine where he delivers classroom sessions on Big Data, Unix and Java. Also a sports enthusiast, he brings a unique perspective to the table.</p>
+
+        				</div>
+        			</article>
+                    <!-- End Single Service Item -->
+
+                    <!-- Single Service Item -->
+        			<article class="col-md-4 col-sm-6 col-md-offset-2 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="200ms">
+                        <div class="service-block text-center">
+                            <div class="service-icon text-center">
+                                <!-- <i class="tf-globe"></i> -->
+                                <img src="images/guides/mayank.jpg" alt="" style="height:20vh;">
+                            </div>
+                            <h3>Mayank Jain</h3>
+                            <!-- <h4>Rural and Sub-urban</h4> -->
+            <p>Mayank, a gem of NSIT, is automation engineer with 5+ years of experience in technical and social economic sector. He is revolutionizing the world with a aim to improve the social aspects having worked with Global Social Economy Forum, Urban Habitat Summit, Indian Student Parliament, Indo-Afghan Future Workshop, Co-founder of MicroX Foundation which aims to fix the broken food system through sustainable livelihood creation, promoting urban farming and brings producers and consumers closer.</p>
+
+                        </div>
+        			</article>
+                    <!-- End Single Service Item -->
+
+                    <!-- Single Service Item -->
+        			<!-- <article class="col-md-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="400ms">
+        				<div class="service-block text-center">
+        					<div class="service-icon text-center">
+        						<i class="tf-genius"></i>
+        					</div>
+        					<h3>Waste Management</h3>
+        					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
+        				</div>
+        			</article> -->
+        			<!-- End Single Service Item -->
+
+        			<!-- Single Service Item -->
+
+        		</div> 		<!-- End row -->
+        	</div>   	<!-- End container -->
+        </section>   <!-- End section -->
+
+        <section id="pricing" class="pricing section">
+            <div class="container">
+                <div class="row">
+
+                    <!-- section title -->
+                    <div class="title text-center wow fadeInDown" data-wow-duration="500ms">
+                        <h2>Trek Details and <span class="color">Guides</span></h2>
+                        <div class="border"></div>
+                    </div>
+                    <!-- /section title -->
+
+                    <!-- single pricing table -->
+                    <div class="col-md-4 col-sm-6 col-md-offset-1 col-xs-12 text-center wow fadeInUp" data-wow-duration="200ms">
+                        <div class="price-item">
+
+                            <!-- plan name & value -->
+                            <div class="price-title">
+                                <h3 >Delhi/Haryana</h3>
+                                <p class="value">rural visit</p>
+                            </div>
+                            <!-- /plan name & value -->
+
+                            <!-- plan description -->
+                            <ul>
+                                <li>Rural trek</li>
+                                <!-- <li>Mayanak Jain</li> -->
+                                <li>For details contact:</li>
+                                <li>Anirudh Kumar: +91 98180 59361</li>
+                                <!-- <li>10 GB Bandwidth</li> -->
+                                <!-- <li>24/7 Tech Support</li> -->
+                            </ul>
+                            <!-- /plan description -->
+
+                            <!-- signup button -->
+                            <!-- <a class="btn btn-transparent" href="#"></a> -->
+                            <!-- /signup button -->
+
+                        </div>
+                    </div>
+                    <!-- end single pricing table -->
+
+                    <!-- single pricing table -->
+                    <div class="col-md-4 col-md-offset-2 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="400ms">
+                        <div class="price-item">
+
+                            <!-- plan name & value -->
+                            <div class="price-title">
+                                <h3>St Marks School</h3>
+                                <p class="value">meera bagh</p>
+                            </div>
+                            <!-- /plan name & value -->
+
+                            <!-- plan description -->
+                            <ul>
+                                <li>Education trek</li>
+                                <li>For details contact</li>
+                                <li>Aaina : +91 81309 04947</li>
+                                <!-- <li>1 GB Storage</li>
+                                <li>10 GB Bandwidth</li>
+                                <li>24/7 Tech Support</li> -->
+                            </ul>
+                            <!-- /plan description -->
+
+                            <!-- signup button -->
+                            <!-- <a class="btn btn-transparent" href="#">Signup</a> -->
+                            <!-- /signup button -->
+
+                        </div>
+                    </div>
+                    <!-- end single pricing table -->
+
+                    <!-- single pricing table -->
+                    <!-- end single pricing table -->
+
+                    <!-- single pricing table -->
+
+                    <!-- end single pricing table -->
+
+
+                </div>       <!-- End row -->
+            </div>   	<!-- End container -->
+        </section>   <!-- End section -->
 
 <!--
 Start Counter Section
